This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

26-Sep-2001 (Lars Duening)  (3.3.101)
    - (interpret.c) Assignments to negative length ranges (eg. [3..2]) are
        caught and throw an error (reported by Gimli).
    - (gcollect.c) Printing memory information during a GC is more robust
        against string NULL pointers (reported by Freaky).
    - (lex.c) It is possible to specify multiple pragmas in one #pragma
        statement, separated by commas (suggested by Largo).

08-Sep-2001 (Lars Duening)  (3.3.100)
    - (interpret.c) The test if a function call should be trace or not
        was done against the command_giver, not against the
        current_interactive as documented (reported by Gnomi).
    - (simulate.c) When entering a fatal(), the given format string is
        printed as is to stderr (just a precaution).
    - (smalloc.c) The 'magic match' failed messages now give the expected
        block address and sizes, too.
    - (lex.c) Added warning when an unknown pragma is encountered (suggested
        by Robert).

05-Sep-2001 (Lars Duening)  (3.3.99)
    - (prolang.y) The driver couldn't handle (multiple?) second-level inherits
        of a 'private nomask' function, which inline closure now are (reported
        by Bardioc).

03-Sep-2001 (Lars Duening)  (3.3.98)
    - (xalloc, smalloc) New helper function dump_malloc_trace() to, well, dump
        the malloc trace if there is one.

31-Aug-2001 (Lars Duening)  (3.3.97)
    - (lex.c) The lfuns implementing inline closures are now 'private nomask', 
        which is the real solution unlike the one implemented in
        3.2.9-dev.260/3.3.39 (suggested by Freaky).
    - (efuns.c) If terminal_colour() was used with a closure returning a
        computed string, the ever call (but the first) within the same
        formatting clobbered the result from the previous one (reported by Ben
        and Elric).