@@ -22,14 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 101)
-(Parent-Version lpmud 3-3 100)
-(Version-Log "Assignments to negative length ranges are caught.
-Corrected a crasher in the GC printing of string NULL pointers.
-It is possible to specify multiple pragmas in one statement.")
+(Project-Version lpmud 3-3 102)
+(Parent-Version lpmud 3-3 101)
+(Version-Log "Allowed the special case of assignments to [i..i-1].
+The pragma recognition no longer stumbles over CRs.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 26 Sep 2001 21:47:31 -0600")
+(Checkin-Time "Thu, 27 Sep 2001 19:59:44 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -62,8 +61,8 @@ It is possible to specify multiple pragmas in one statement.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.27 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.164 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.201 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.165 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.202 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -142,9 +141,9 @@ It is possible to specify multiple pragmas in one statement.")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.20 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.82 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.83 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.58 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.59 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.37 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.8 644))
